apps/pets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
  name: pets
  namespace: pets
spec:
  ingressClassName: nginx
  rules:
  - host: pets.kubernetes.docker.internal
    http:
      paths:
      - backend:
          service:
            name: pets
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pets.kubernetes.docker.internal
    secretName: pets-tls
